fixed the issue of the text overflow in intro name in home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,11 +141,11 @@ body {
 }
 
 .banner--intro-name {
-  font-size: 4em;
+  font-size: 4rem;
 }
 
 .banner--intro-title {
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 @media screen and (max-width: 1100px) {
@@ -266,5 +266,5 @@ iframe {
 
 .project--container{
   align-self: center;
-  margin-top: 50%;
+  margin-top: 25%;
 }
